Fix unwanted whitespace on larger displaces

--- a/static/home_cards.css
+++ b/static/home_cards.css
@@ -9,6 +9,6 @@
     box-shadow: 0 16px 16px 0 rgba(0,0,0,0.2);
 }
 
-.container {
+.container-fluid {
     padding: 2px 16px;
 }
